--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <p class="tab-links" onclick="opentab('Education')">Education</p>
                     <p class="tab-links" onclick="opentab('Soft Skills')">Soft Skills</p>
                     <p class="tab-links" onclick="opentab('Interests')">Interests</p>
+                    <p class="tab-links" onclick="opentab('COURSES')">Courses</p>
                 </div>
                 <div class="tab-contents active-tab" id="skills"> <!--skills-->
                     <ul>
@@ -80,9 +81,23 @@
                 <div class="tab-contents" id="Interests"> <!--Interests-->
                     <ul>
                         <li><span>New Technology.</span><br>Ai technology(ChatGPT,Bard)</li>
-                        <li><span>Business.</span><br> Public Investment Fund</li>
                         <li><span>Programming.</span><br>Learn new languages(apple-Swift,C#)</li>
                         <li><span>Learn more about information security. </span><br>Cyber security(academy.hsoub)</li>
+                    </ul>
+                </div>
+                <div class="tab-contents" id="COURSES"> <!--COURSES-->
+                    <ul>
+                        <li><span>Microsoft Office, Excel.</span><br> I have greatly benefited from attending the course on Microsoft Office and Excel basics. Through this course, I 
+                            have acquired new skills and enhanced my knowledge of various Office programs, including Word and 
+                            PowerPoint. I am now able to use Excel efficiently for organizing data, creating spreadsheets, and analyzing 
+                            information effectively.</li>
+                        <li><span>Introduction to Methodologies and Frameworks for Technical Projects.</span><br>I greatly benefited from attending the "Introduction to Methodologies and Frameworks for Technical 
+                            Projects" course, which lasted for one hour. During this session, I gained essential insights into key 
+                            concepts of managing technical projects, including a deeper understanding of frameworks such as Agile 
+                            and Scrum.</li>
+                        <li><span>Introduction to Technical Projects.</span><br>I greatly benefited from the "Introduction to Technical Projects" course, which lasted one hour. The course 
+                            provided a solid overview of technical projects, their stages, and their significance. Despite its short 
+                            duration, it offered valuable insights into key concepts.</li>
                     </ul>
                 </div>
             </div>
@@ -118,9 +133,10 @@
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/abdullah-aljehani-4112331a6?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <a href="https://x.com/K3jol?t=Y32VRX-taOSjcM702GcpEw&s=09" target="_blank"><i class="fa fa-twitter-square"></i></a>
-                    <a href="https://instagram.com/k3jol?utm_source=qr&igshid=YzU1NGVlODEzOA==" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/i3a2e/?igsh=OGhocnV0am5iOHAw#" target="_blank"><i class="fa fa-instagram"></i></a>
                 </div>
-                <a href="images/Abdullah Aljehani CV.pdf" Download target="_blank" class="btn btn2">Download CV</a>
+                <a href="C:\Users\A\Desktop\Portfolio\images\Abdullah_Aljehani.CV.pdf" Download target="_blank" class="btn btn2">Download CV</a>
+                <a href="images/Abdullah Aljehani CV.pdf" Download target="_blank" class="btn btn2">Download CV (Colored)</a>
             </div>
             <!----<div class="contact-right"> ---->
                 <div class="containar">
